--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -17,10 +17,12 @@
   left: 20px;
   width: 80px;
   object-fit: contain;
+  cursor: pointer;
 }
 .nav_avatar {
   position: fixed;
   right: 20px;
   width: 30px;
   object-fit: contain;
+  cursor: pointer;
 }
